--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python: "2.7"
 
+dist: trusty
 sudo: required
-
 services:
   - docker
 
@@ -18,20 +18,18 @@ addons:
 
 install:
   - pip install ansible
+  - if [ -f 'requirements.yml' ]; then yum -y install git && ansible-galaxy install -r requirements.yml; fi
 
   # version checks
+  - docker --version
   - ansible --version
 
   # Create ansible.cfg with correct roles_path
   - printf '[defaults]\nroles_path=../' > ansible.cfg
 
-  # join docker swarm
-  - docker swarm init
-
 script:
   - ansible-playbook test.yml --syntax-check
-  - ansible-playbook test.yml -vvv -c local -b -i 'localhost,'
-  # - ./test/checks.sh # tasks have their own asserts, but this is an option too
+  - ansible-playbook test.yml -vvv -c local -b
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
